AC_INIT([abook], [1.0])                                                                                                                 
AC_CONFIG_SRCDIR([abook.c])
AM_INIT_AUTOMAKE([foreign])

# Common compiler flags
CFLAGS="-Wall -O2"

# Checks for programs
AC_PROG_CC
AM_PROG_CC_STDC
AC_PROG_INSTALL

# Checks for header files
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
